--- a/package.json
+++ b/package.json
@@ -36,5 +36,13 @@
     "tailwindcss": "^4",
     "tw-animate-css": "^1.3.7",
     "typescript": "^5"
+  },
+  "engines": {
+    "node": ">=20.11.1",
+    "pnpm": ">=10.17.1"
+  },
+  "volta": {
+    "node": "20.11.1",
+    "pnpm": "10.17.1"
   }
 }
